test/performance/vectorization/vectorizeOnly/constChecking/standaloneConstChecking.good
standaloneConstChecking.chpl:7: error: illegal lvalue in assignment
standaloneConstChecking.chpl:8: error: illegal lvalue in assignment
standaloneConstChecking.chpl:17: error: illegal lvalue in assignment
standaloneConstChecking.chpl:22: error: illegal lvalue in assignment
standaloneConstChecking.chpl:28: error: illegal lvalue in assignment
standaloneConstChecking.chpl:33: error: illegal lvalue in assignment
